--- a/static/style.css
+++ b/static/style.css
@@ -5,6 +5,7 @@
     padding: 20px;
     max-width: 300px;
     margin: 20px auto;
+    text-align: center;
 }
 
 .ticket-header {
@@ -27,6 +28,7 @@
 .ticket-details {
     font-size: 16px;
     color: #555;
+    text-align: left;
 }
 
 .ticket-info {
@@ -34,7 +36,5 @@
 }
 img{
     border: 1px solid black;
-    border-radius: 4px;
-    padding: 5px;
-    width: 150px;
+    
 }
