--- a/templates/index.html
+++ b/templates/index.html
@@ -27,6 +27,7 @@
     <span class="ticket-date"><strong>Ticket Policy:</strong> {{n.ticketPolicy|safe}}</span>
     <br>
     <span class="ticket-date"><strong>Event Faq:</strong> {{n.eventFaq|safe}}</span>
+    <a href="{% url 'about_ticket' %}">Buy</a>
   </div>
 </div>
 {% endfor %}
