ticket description page added

--- a/templates/about_ticket.html
+++ b/templates/about_ticket.html
@@ -1,28 +1,23 @@
+{% extends 'index.html'%}
 {% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Design Page</title>
-  <link rel="stylesheet" href="{% static 'aboutTicket.css'%}">
-</head>
-<body>
+{% block content %}
+
   <div class="container">
-    <img src="https://via.placeholder.com/800x400" alt="Placeholder Image">
+    <h1>{{details.title}}</h1>
+    <img src="{{details.secondBanner.url}}" alt="Placeholder Image">
     <div class="description">
       <h2>Description</h2>
-      <p>{{dashboardData.description|safe}}</p>
+      <p>{{details.description|safe}}</p>
     </div>
     <div class="policy">
       <h2>Policy</h2>
-      <p>This is the policy section. You can outline any policies, terms, or conditions here.</p>
+      <p>{{details.ticketPolicy|safe}}</p>
     </div>
     <div class="acknowledgement">
       <h2>Acknowledgement</h2>
-      <p>This is the acknowledgment section. You can mention any acknowledgments or credits here.</p>
+      <p>{{details.acknowledgement|safe}}</p>
     </div>
   </div>
-</body>
-</html>
+
+{% endblock %}
 
