--- a/static/style.css
+++ b/static/style.css
@@ -40,3 +40,25 @@ img{
     height: auto;
     
 }
+body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+  }
+  .container {
+    max-width: 800px;
+    margin: 20px auto;
+    padding: 20px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+  }
+ 
+  .description {
+    margin-top: 20px;
+  }
+  .policy,
+  .acknowledgement {
+    margin-top: 20px;
+    border-top: 1px solid #ccc;
+    padding-top: 20px;
+  }
