--- a/templates/index.html
+++ b/templates/index.html
@@ -28,7 +28,7 @@
     <span class="ticket-date"><strong>Ticket Policy:</strong> {{n.ticketPolicy|safe}}</span>
     <br>
     <span class="ticket-date"><strong>Event Faq:</strong> {{n.eventFaq|safe}}</span>
-    <a href="/about/{{n.slug}}/{{n.id}}" class="btn btn-primary">About Ticket</a>
+    <a href="/about/{{n.slug}}/{{n.id}}" class="btn btn-primary about">About Ticket</a>
   </div>
 </div>
 {% endfor %}
