--- a/templates/about_ticket.html
+++ b/templates/about_ticket.html
@@ -5,6 +5,10 @@
   <div class="container">
     <h1>{{details.title}}</h1>
     <img src="{{details.secondBanner.url}}" alt="Placeholder Image">
+    <div class="location">
+      <p>Location</p>
+      <p>{{details.location}}</p>
+    </div>
     <div class="description">
       <h2>Description</h2>
       <p>{{details.description|safe}}</p>
@@ -17,6 +21,7 @@
       <h2>Acknowledgement</h2>
       <p>{{details.acknowledgement|safe}}</p>
     </div>
+    
   </div>
 
 {% endblock %}
