--- a/static/style.css
+++ b/static/style.css
@@ -62,7 +62,7 @@ body {
     border-top: 1px solid #ccc;
     padding-top: 20px;
   }
-  .location:hover,.about:hover{
+  .about:hover{
     background-color: greenyellow;
   }
   .about{
